--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,10 +17,11 @@
 
 	<com.example.i2at.tc.EditNumber
 	    android:id="@+id/celsius"
+	    android:text="@+id/EditText01"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:contentDescription="celsius"
-	    android:gravity="right|center_vertical"
+	    android:gravity="left|center_vertical"
 	    android:inputType="numberDecimal"
 	    android:tag="celsius" >
 
@@ -32,6 +33,7 @@
 
 	<com.example.i2at.tc.EditNumber
 	    android:id="@+id/fahrenheit"
+	    android:text="@+id/EditText02"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:contentDescription="fahrenheit"
