--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -20,7 +20,7 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:contentDescription="celsius"
-	    android:gravity="left|center_vertical"
+	    android:gravity="right|center_vertical"
 	    android:inputType="numberDecimal"
 	    android:tag="celsius" >
 
